      the same time.  But for the time being, you'll get an exception telling
      you whether to upgrade your client (pinto) or the server (pintod).

      - The PINTO_COLORS and PINTO_COLOURS environment variables are deprecated
      in favor of PINTO_PALETTE.  You can still use the old names for now, but
      they will be removed in a future release.

      [BUG FIXES]

      - Colorization is now disabled by default when the output is being piped or
      redirected to a file.  This improves interoperability with tools like grep,
      sort, etc.  To force colorization, use the --color or --colour option.
      Fixes GH #155. Thanks @mar-kolya.

      [ENHANCEMENTS]

      - When using the "add" command, the paths to the local archives can now be
      expressed using file:/// URLs.

      - The PINTO_PAGER_OPTIONS environment variable can now be used to pass specific
      options to your pager when using it with pinto.  For example, to tell `less`
      to display colors.

      [DOCUMENTATION]

      - Revised the Tutorial and QuickStart documentation.

0.09992   2014-04-23 15:14:50 America/Los_Angeles

      [BUG FIXES]

      - Fixed extra newlines that were inserted into large responses
      from Pinto::Server.  Closes GH #154.  Thanks @mar-kolya.

0.09991   2014-04-05 06:28:18 America/Denver

      [BUG FIXES]

      - Fixed timezone handling for remote users.  But it only applies
      to new revisions.  Old ones will probably still be reported in
      the wrong timezone (unless you happen to be in the right one).

0.0999    2014-04-03 22:53:31 America/Los_Angeles

      [INCOMPATIBLE CHANGES]

      - Internal API changes only. Now all the attributes that were named
      "from_stack" are named "stack". This makes the API more consistent, since
      the "stack" is almost always the thing that is in play.

      [OTHER CHANGES]

      - No new features, enhancements, or bug fixes.

0.0998    2014-03-31 15:27:14 America/Los_Angeles
